// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CoverArt Component > should match the snapshot 1`] = `
<DocumentFragment>
  <div
    class="cover-art mb-6"
  >
    <img
      alt="Placeholder Cover Art Image"
      class="h-96 rounded-md"
      src="/src/assets/placeholder.svg"
    />
  </div>
</DocumentFragment>
`;

exports[`CoverArt Component should match the snapshot 1`] = `
<div
  class="cover-art mb-6"
>
  <img
    alt="Placeholder Cover Art Image"
    class="rounded-md h-96"
    src="/path/to/placeholder.svg"
  />
</div>
`;
